--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -211,7 +211,7 @@ core operations. In the same way, automata-based machine learning should
 benefit from frameworks with these features. We are just beginning to see new
 developments in frameworks for automata-based machine learning including
 GTN\footnote{I am a co-author of the GTN framework which is open source at
-\url{https://github.com/gtn-org/gtn}} and K2.\footnote{The K2 framework is the
+\url{https://github.com/gtn-org/gtn}} and k2.\footnote{The k2 framework is the
 successor of Kaldi and is open source at \url{https://github.com/k2-fsa/k2}}
 Perhaps these will encourage the use of automata in machine learning.
 
