--- a/latex/basic_operations.tex
+++ b/latex/basic_operations.tex
@@ -27,8 +27,8 @@ the string $aba$.
 \begin{figure}
     \centering
     \includegraphics[scale=\dotscale]{figures/fsa_pre_closure}
-    \caption{An example of a simple acceptor with language $\{ab\}$, in other
-    words $\L(\gA) = \{ab\}$.}
+    \caption{An example of a simple acceptor with language $\{aba\}$, in other
+    words $\L(\gA) = \{aba\}$.}
     \label{fig:fsa_pre_closure}
 \end{figure}
 
@@ -45,7 +45,7 @@ Figure~\ref{fig:fsa_closure}.
     \includegraphics[scale=\dotscale]{figures/fsa_closure}
     \caption{The closure $\gA^*$ of the graph in
     figure~\ref{fig:fsa_pre_closure}. The language of the graph is $\{\epsilon,
-    ab, abab, \ldots\}$.}
+    aba, abaaba, \ldots\}$.}
     \label{fig:fsa_closure}
 \end{figure}
 
